--- a/Week7/styles.css
+++ b/Week7/styles.css
@@ -8,12 +8,16 @@ h1{
 #form input{
     margin: 5px;
 }
-#Results{
-    text-align: center;
-}
-#Results input{
+
+p{
+    display: inline-grid;
+    grid-template-columns: 3fr; 
     margin: 10px;
 }
+#info1{
+    margin-left: 75px;
+}
+
 }
 
 @media only screen and (min-width: 768px){
@@ -24,7 +28,8 @@ h1{
     #centerme{
         text-align: center;
     }
-    #Results{
-        font-weight: bold;
+    #info1{
+        margin-left: 750px;
     }
+    
 }
